--- a/src/app/components/score/score.component.html
+++ b/src/app/components/score/score.component.html
@@ -6,7 +6,7 @@
     <p>Your score is {{score}} !</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button color="accent">See Leaderboard</button>
-    <button mat-button color="accent">Share</button>
+    <a mat-button color="accent" routerLink="/leaderboard">See Leaderboard</a>
+    <a mat-button color="accent" routerLink="/feedback">Give Feedback</a>
   </mat-card-actions>
 </mat-card>
