fixed leaderboard bug, 404 page

--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -19,8 +19,8 @@
     </div>
 
     <div class="btn-group">
-      <button mat-raised-button color="primary" matStepperPrevious>Back</button>
-      <button mat-raised-button color="accent" matStepperNext>Next</button>
+      <button mat-raised-button color="primary" matStepperPrevious>Previous Question</button>
+      <button mat-raised-button color="accent" matStepperNext>Next Question</button>
     </div>
 
   </mat-step>
