--- a/src/app/components/leader/leader.component.html
+++ b/src/app/components/leader/leader.component.html
@@ -7,8 +7,8 @@
   <hr />
   <mat-list-item *ngFor="let each of people">
     <img matListAvatar src="assets/1.png" *ngIf="each.score == maxscore">
-    <img matListAvatar src="assets/2.png" *ngIf="each.score >= maxscore*0.5  && each.score < maxscore">
-    <img matListAvatar src="assets/3.png" *ngIf="each.score < maxscore*0.1">
+    <img matListAvatar src="assets/2.png" *ngIf="each.score < maxscore  && each.score > 0.5*maxscore">
+    <img matListAvatar src="assets/3.png" *ngIf="each.score < maxscore*0.5">
     <h3 mat-line> {{each.name}} </h3>
     <span style="float:right">{{each.score}}</span>
   </mat-list-item>
